# hashguard

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml  publish.yml  rust.yml
src/: app.rs  cli.rs  color_templates.rs  command_handling.rs  commands.rs  download.rs  filename_handling.rs  hasher.rs  local.rs  main.rs  os_specifics.rs  panic_handling.rs  term_output.rs  util.rs  utils.rs  verify.rs
src/tests/: mod.rs  unit_tests.rs
