[package]
name = "hashguard"
version = "3.0.2"
edition = "2021"
description = "Command-Line tool for ensuring the integrity of files using hash sums"
authors = ["javaLux"]
license = "MIT"
repository = "https://github.com/javaLux/hashguard"
readme = "README.md"
keywords = ["file", "cli", "tools", "hash", "cryptography"]
categories = ["command-line-utilities", "development-tools", "cryptography"]
rust-version = "1.74.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
better-panic = "0.3.0"
chksum = { version = "0.3.0", default-features = false, features = ["md5", "sha1", "sha2-224", "sha2-256", "sha2-384", "sha2-512"] }
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
clap = { version = "4.5.23", features = ["derive", "cargo", "string"] }
color-eyre = "0.6.3"
ctrlc = "3.4.5"
indicatif = "0.17.9"
lazy_static = "1.5.0"
log = "0.4.22"
os_info = { version = "3.9.0", default-features = false }
output-coloring = "0.1.0"
path-absolutize = "3.1.1"
percent-encoding = "2.3.1"
regex = { version = "1.11.1", default-features = false, features = ["unicode"] }
simple-home-dir = "0.4.5"
simplelog = "0.12.2"
ureq = { version = "2.12.1", default-features = false, features = ["tls"] }
url = { version = "2.5.4", default-features = false }

[profile.release]
# compiler optimizations for binary size
opt-level = "s"
# link optimizations -> causes a longer link time but produce better optimize code
lto = true
# strip either symbols or debug info from the final binary
strip = true
