[package]
name = "hashguard"
version = "4.0.0"
edition = "2021"
description = "Command-Line tool for ensuring the integrity of files using hash sums"
authors = ["javaLux"]
license = "MIT"
repository = "https://github.com/javaLux/hashguard"
readme = "README.md"
keywords = ["file", "cli", "tools", "hash", "cryptography"]
categories = ["command-line-utilities", "development-tools", "cryptography"]
rust-version = "1.74.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
clap = { version = "4.5.37", features = ["derive", "cargo", "string"] }
ctrlc = "3.4.6"
indicatif = { version = "0.17.11", default-features = false }
log = "0.4.27"
os_info = { version = "3.10.0", default-features = false }
output-coloring = "0.1.0"
path-absolutize = "3.1.1"
percent-encoding = "2.3.1"
regex = { version = "1.11.1", default-features = false, features = ["unicode"] }
dirs = "6.0.0"
simplelog = "0.12.2"
ureq = "3.0.11"
url = { version = "2.5.4", default-features = false }
anyhow = "1.0.98"
sha2 = "0.10.9"
sha3 = "0.10.8"
hex = "0.4.3"
walkdir = "2.5.0"

[profile.release]
# compiler optimizations for binary size
opt-level = "s"
# link optimizations -> causes a longer link time but produce better optimize code
lto = true
# strip either symbols or debug info from the final binary
strip = true
